// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ui - PhoneInput > should call onValueChange with parsed metadata 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        for="phone-_r_26_"
      >
        Phone
      </label>
      <div
        class="styles__y109lc4 styles_large__y109lc1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__y109lc0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__y109lc5"
          data-size="large"
          id="phone-_r_26_"
          maxlength="20"
          name="phone"
          placeholder="Enter phone number"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should control the value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        for="phone-_r_6_"
      >
        Phone
      </label>
      <div
        class="styles__y109lc4 styles_large__y109lc1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__y109lc0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__y109lc5"
          data-size="large"
          id="phone-_r_6_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should display error message 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        for="phone-_r_i_"
      >
        Phone
      </label>
      <div
        class="styles__y109lc4 styles_large__y109lc1"
        data-disabled="false"
        data-error="true"
      >
        <div
          class="styles__y109lc0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-describedby="_r_j_"
          aria-invalid="true"
          class="styles__y109lc5"
          data-size="large"
          id="phone-_r_i_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
        />
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            clip-rule="evenodd"
            d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
        id="_r_j_"
        role="status"
      >
        Invalid phone number format
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should have a placeholder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        for="phone-_r_12_"
      >
        Phone
      </label>
      <div
        class="styles__y109lc4 styles_large__y109lc1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__y109lc0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d"
          data-disabled="false"
        >
          🇺🇸
        </div>
        <input
          aria-invalid="false"
          class="styles__y109lc5"
          data-size="large"
          id="phone-_r_12_"
          maxlength="20"
          name="phone"
          placeholder="Enter phone number"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should render correctly when input is disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        for="phone-_r_c_"
      >
        Phone
      </label>
      <div
        class="styles__y109lc4 styles_large__y109lc1"
        data-disabled="true"
        data-error="false"
      >
        <div
          class="styles__y109lc0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d"
          data-disabled="true"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__y109lc5"
          data-size="large"
          disabled=""
          id="phone-_r_c_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should render correctly with basic props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        for="phone-_r_0_"
      >
        Phone
      </label>
      <div
        class="styles__y109lc4 styles_large__y109lc1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__y109lc0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__y109lc5"
          data-size="large"
          id="phone-_r_0_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should render correctly with required field 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles__xf61n40 styles_alignItems_flex-start_xxsmall__xf61n4v styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.25rem_xxsmall__xf61n45j"
      >
        <label
          class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          for="phone-_r_q_"
        >
          Phone
        </label>
        <span
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
        >
          *
        </span>
      </div>
      <div
        class="styles__y109lc4 styles_large__y109lc1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__y109lc0 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__y109lc5"
          data-size="large"
          id="phone-_r_q_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          required=""
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
